# projects-board

./: package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
contract/src/models/: contribution.rs  contributors.rs  mod.rs  permission.rs  project.rs
